platform/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system

spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system

  hostnames:
    - longhorn.k8s.home

  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
