platform/longhorn/prometheus-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-longhorn-manager
  namespace: longhorn-system

spec:
  podSelector:
    matchLabels:
      app: longhorn-manager

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus

      ports:
        - protocol: TCP
          port: 9500
